need imagepath for projectiles